[gd_scene load_steps=4 format=3 uid="uid://b2thhhwe44cuy"]

[ext_resource type="Script" path="res://scripts/player/camera_rig.gd" id="1_lrjhl"]
[ext_resource type="Shader" path="res://RPG_assets/assets/shaders/forground_shader.gdshader" id="2_bwweq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgeju"]
shader = ExtResource("2_bwweq")
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.5
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 0.9

[node name="camera_rig" type="Node3D"]
script = ExtResource("1_lrjhl")

[node name="Camera3D" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viewport" type="SubViewport" parent="Camera3D/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="background_camera" type="Camera3D" parent="Camera3D/background_viewport_container/background_viewport"]
cull_mask = 1047553

[node name="foreground_viewport_container" type="SubViewportContainer" parent="Camera3D"]
material = SubResource("ShaderMaterial_qgeju")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="foreground_viewport" type="SubViewport" parent="Camera3D/foreground_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="foreground_camera" type="Camera3D" parent="Camera3D/foreground_viewport_container/foreground_viewport"]
cull_mask = 1047554
